Página com Pontos de arrecadação

--- a/src/data.html
+++ b/src/data.html
@@ -20,24 +20,26 @@
             <div class="row">
                 <div class="row">
                     <div class="col-md-3">
-                        <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%">
+                        <a href="index.html">
+                            <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%"/>
+                        </a>
                     </div>
                     <div class="col-md-9">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">O que doar</a>
+                                <a class="nav-link" href="#">O que doar</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Pontos de arrecadação</a>
+                                <a class="nav-link" href="points.html">Pontos de arrecadação</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Seja um voluntário</a>
+                                <a class="nav-link" href="#">Seja um voluntário</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Nossos números</a>
+                                <a class="nav-link" href="data.html">Nossos números</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link disabled" href="#">Perguntas Frequentes</a>
+                                <a class="nav-link" href="#">Perguntas Frequentes</a>
                             </li>
                         </ul>
                     </div>
