--- a/src/index.html
+++ b/src/index.html
@@ -21,24 +21,26 @@
 		<div class="col-md-12">
 			<div class="row">
 				<div class="col-md-3">
-					<img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%">
+					<a href="index.html">
+						<img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%"/>
+					</a>
 				</div>
 				<div class="col-md-9">
 					<ul class="nav">
 						<li class="nav-item">
-							<a class="nav-link active" href="#">O que doar</a>
+							<a class="nav-link" href="#">O que doar</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Pontos de arrecadação</a>
+							<a class="nav-link" href="points.html">Pontos de arrecadação</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Seja um voluntário</a>
+							<a class="nav-link" href="#">Seja um voluntário</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Nossos números</a>
+							<a class="nav-link" href="data.html">Nossos números</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled" href="#">Perguntas Frequentes</a>
+							<a class="nav-link" href="#">Perguntas Frequentes</a>
 						</li>
 					</ul>
 				</div>
@@ -162,7 +164,8 @@
 						<div class="col-md-4">
 							<div class="row">
 								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+									<!-- <video alt="Entrevista Guia Penha on-line" href=""> </video> -->
+									<iframe width="670" height="377" src="https://www.youtube.com/embed/oeKATskfhsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<h3>
 										Guia Penha on-line
 									</h3>
@@ -173,7 +176,7 @@
 							</div>
 							<div class="row">
 								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+									<iframe width="780" height="439" src="https://www.youtube.com/embed/XkRdxTIbxg8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<h3>
 										E aí bicho?
 									</h3>
@@ -184,7 +187,7 @@
 							</div>
 							<div class="row">
 								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+									<iframe width="670" height="377" src="https://www.youtube.com/embed/0Gu6eL5YGuM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<h3>
 										Programa Nossa Entidade - Alesp
 									</h3>
@@ -195,7 +198,8 @@
 							</div>
 							<div class="row">
 								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+									<iframe width="670" height="377" src="https://fb.watch/8H_Be4TxVu/" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									
 									<h3>
 										Gente que faz a diferença
 									</h3>
@@ -204,31 +208,10 @@
 									</p>
 								</div>
 							</div>
+							
 							<div class="row">
 								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-									<h3>
-										Programa Nossa Entidade - Alesp
-									</h3>
-									<p>
-										Nathália Fragoso, Flávia Monteiro e Lúcia Fragoso falam sobre as atividades da ONG Ecopatas
-									</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-									<h3>
-										Gente que faz a diferença
-									</h3>
-									<p>
-										Lúcia Fragoso fala um pouco do trabalho na Ecopatas
-									</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12">
-									<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+									<iframe width="1264" height="480" src="https://www.youtube.com/embed/Xbvtg6jKzaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<h3>
 										Grupo Korin
 									</h3>
