Estrutura da página O que doar?

--- a/src/data.html
+++ b/src/data.html
@@ -27,7 +27,7 @@
                     <div class="col-md-9">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">O que doar</a>
+                                <a class="nav-link" href="donations.html">O que doar</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="points.html">Pontos de arrecadação</a>
@@ -43,7 +43,7 @@
                             </li>
                         </ul>
                     </div>
-                    </div>
+                    
                 </div>
 
                 <main>
