--- a/src/points.html
+++ b/src/points.html
@@ -26,7 +26,7 @@
                     <div class="col-md-9">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">O que doar</a>
+                                <a class="nav-link" href="donations.html">O que doar</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="points.html">Pontos de arrecadação</a>
