--- a/src/data.html
+++ b/src/data.html
@@ -33,7 +33,7 @@
                                 <a class="nav-link" href="points.html">Pontos de arrecadação</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Seja um voluntário</a>
+                                <a class="nav-link" href="volunteer.html">Seja um voluntário</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="data.html">Nossos números</a>
