--- a/src/data.html
+++ b/src/data.html
@@ -39,11 +39,10 @@
                                 <a class="nav-link" href="data.html">Nossos números</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Perguntas Frequentes</a>
+                                <a class="nav-link" href="faq.html">Perguntas Frequentes</a>
                             </li>
                         </ul>
                     </div>
-                    
                 </div>
 
                 <main>
