Estilização da navbar, Adição das tags semanticas header, main, nav

--- a/src/data.html
+++ b/src/data.html
@@ -16,15 +16,15 @@
   </head>
     <body>
         <!-- HEADER BANNER  -->
-        <div class="container">
+        <div>
             <div class="row">
-                <div class="row">
+                <header class="row">
                     <div class="col-md-3">
                         <a href="index.html">
-                            <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%"/>
+                            <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas-sembg.png" width="50%"/>
                         </a>
                     </div>
-                    <div class="col-md-9">
+                    <nav class="col-md-9">
                         <ul class="nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="donations.html">O que doar</a>
@@ -43,7 +43,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </header>
 
                 <main>
                     <h4>Impacto Causa Animal: </h4>
