--- a/src/donations.html
+++ b/src/donations.html
@@ -16,16 +16,16 @@
   </head>
   <body>
 
-    <div class="container">
+    <div>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="row">
+			<header class="row">
 				<div class="col-md-3">
 					<a href="index.html">
-						<img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%"/>
+						<img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas-sembg.png" width="50%"/>
 					</a>
 				</div>
-				<div class="col-md-9">
+				<nav class="col-md-9">
 					<ul class="nav">
 						<li class="nav-item">
 							<a class="nav-link" href="donations.html">O que doar</a>
@@ -44,44 +44,47 @@
 						</li>
 					</ul>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h3>
-						<span>Posso doar qualquer tipo de material?</span>
-					</h3>
+			</header>
+			<main>
+				<div class="row">
+					<div class="col-md-12">
+						<h3>
+							<span>Posso doar qualquer tipo de material?</span>
+						</h3>
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<p>
-						<span>Para realizar nosso trabalho de castrar os animais de rua aceitamos tampas plásticas e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto, sendo descartados. Pedimos que separem o material a ser doado a Ecopatas, evite o envio de materiais como agulhas, seringas e outros materiais que possam causar prejuízos a saúde dos nossos voluntários.</span>
-					</p>
+				<div class="row">
+					<div class="col-md-6">
+						<p>
+							<span>Para realizar nosso trabalho de castrar os animais de rua aceitamos tampas plásticas e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto, sendo descartados. Pedimos que separem o material a ser doado a Ecopatas, evite o envio de materiais como agulhas, seringas e outros materiais que possam causar prejuízos a saúde dos nossos voluntários.</span>
+						</p>
+					</div>
+					<div class="col-md-6">
+						<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
+					</div>
 				</div>
-				<div class="col-md-6">
-					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
+				<div class="row">
+					<div class="col-md-6">
+						<h5>Materiais separados por cor</h5>
+						<p class="text-info">
+							<span>Sempre conseguimos vender por um preço melhor os materiais já separados por cor e tipo. Você também pode entregar a sua doação já separada.</span>
+						</p>
+					</div>
+					<div class="col-md-6">
+						<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6">
-					<h5>Materiais separados por cor</h5>
-					<p class="text-info">
-						<span>Sempre conseguimos vender por um preço melhor os materiais já separados por cor e tipo. Você também pode entregar a sua doação já separada.</span>
-					</p>
+				<div class="row">
+					<div class="col-md-12">
+						<h5>Doação de materiais de organização e segurança</h5>
+						<p>
+							Caso seja do seu interesse nos ajudar com a segurança dos nossos voluntários que vem a sede da Ecopatas, aceitamos doações de EPI para uma triagem segura e sem riscos biológicos para nossos queridos voluntários. Aceitamos luvas e máscaras descatáveis, tesoura, fitas adesivas, além de sacos de ração vazios (ráfia)
+						</p>
+						
+					</div>
 				</div>
-				<div class="col-md-6">
-					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h5>Doação de materiais de organização e segurança</h5>
-					<p>
-						Caso seja do seu interesse nos ajudar com a segurança dos nossos voluntários que vem a sede da Ecopatas, aceitamos doações de EPI para uma triagem segura e sem riscos biológicos para nossos queridos voluntários. Aceitamos luvas e máscaras descatáveis, tesoura, fitas adesivas, além de sacos de ração vazios (ráfia)
-					</p>
-					
-				</div>
-			</div>
+			</main>
+			
 		</div>
 	</div>
 	
