--- a/src/points.html
+++ b/src/points.html
@@ -15,15 +15,15 @@
 
   </head>
     <body >
-        <div class="container">
+        <div>
             <div class="row">
-                <div class="row">
+                <header class="row">
                     <div class="col-md-3">
                         <a href="index.html">
-                            <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas.jpg" width="50%"/>
+                            <img alt="Ecopatas Logo" src=".\assets\imgs\logoecopatas-sembg.png" width="50%"/>
                         </a>
                     </div>
-                    <div class="col-md-9">
+                    <nav class="col-md-9">
                         <ul class="nav">
                             <li class="nav-item">
                                 <a class="nav-link" href="donations.html">O que doar</a>
@@ -42,14 +42,16 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </header>
             </div>
 
-            <div class="container" >
-                <h4>Pontos de Arrecadação:</h4>
-                <!-- <ul data-js="points" class="points"></ul> -->
-                <div id = "card"></div>
-            </div>
+            <main>
+                <div class="container" >
+                    <h4>Pontos de Arrecadação:</h4>
+                    <!-- <ul data-js="points" class="points"></ul> -->
+                    <div id = "card"></div>
+                </div>
+            </main>
 
         </div>
 
