Estilização do FAQ

--- a/src/faq.html
+++ b/src/faq.html
@@ -46,7 +46,7 @@
 				</div>
 			</header>
 			<main>
-                <div class="row">
+                <div class="row" id="title">
                     <div class="col-md-12">
                         <h2>Perguntas Frequentes</h2>
                     </div>
@@ -55,7 +55,7 @@
                         <p>Tem dúvidas sobre como trabalhamos e o que fazemos? Listamos aqui as perguntas mais realizadas nas nossas redes sociais.</p>
                     </div>   
                 </div>
-                <div class="row">
+                <div class="row" id="answers">
                     <div class="col-md-12">
                         <h6>Como doar tampas e lacres?</h6>
                         <p>
