Ajuste do header e adição do título e paragrafo da pagina

--- a/src/data.html
+++ b/src/data.html
@@ -16,7 +16,6 @@
 </head>
 <body>
         <div>
-            <div class="row">
                 <header class="row">
                     <div class="col-md-3">
                         <a href="index.html">
@@ -45,6 +44,16 @@
                 </header>
 
                 <main>
+                    <div class="titulo-data">
+                        <h2>Nossos Números</h2>
+
+                        <p>
+                            Desde quando iniciamos em 2018,  organizamos cuidadosamente os dados gerados por
+                            nossas ações para que possamos conscientizar e informar mais pessoas do impacto que
+                            nosso trabalho voluntário oferece para os animais, para a sociedade e para o meio ambiente.
+                        </p>
+                    </div>
+                    
         
                     <div class="flourish-embed flourish-chart" data-src="visualisation/6812326">
                         <script src="https://public.flourish.studio/resources/embed.js">
@@ -109,8 +118,6 @@
                         <h6>Todos os direitos reservados | Ecopatas</h6>
                     </div>
                 </footer>
-
-            </div>
         </div>   
 </body>
 </html>
