--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+	<link href="css/home.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
   <body>
@@ -45,40 +47,45 @@
 						</ul>
 					</nav>
 				</header>
-				<main>
+				<main id="main-home">
 
-					<div class="row">
-						<div class="col-md-6">
-							<div class="row">
-								<div class="col-md-12">
-									<h2>OLÁ!</br>Nós somos a Ecopatas</h2>
+					<section id="section-um">
+						<div class="row" >
+							<div class="col-md-6" id="section-um-infos">
+								<div class="row">
+									<div class="col-md-12">
+										<h2>OLÁ!</br>Nós somos a Ecopatas</h2>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12">
+										<p>Desde 2018 viabilizamos castrações em animais de rua através da arrecadação de tampas plásticas e lacres de alumínio em SP</p>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-md-12">
+										<button>Ver os pontos de arrecadação<i class="small material-icons">pets</i></button>
+									</div>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-md-12">
-									<p>Desde 2018 viabilizamos castrações em animais de rua através da arrecadação de tampas plásticas e lacres de alumínio em SP</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-md-12">
-									<button>Ver os pontos de arrecadação</button>
-								</div>
+							<div class="col-md-6">
+								<img alt="Foto dos voluntários" src="assets\imgs\bannerHome.png">
 							</div>
 						</div>
-						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src="assets\imgs\bannerHome.png">
+						
+						<div class="row" id="section-um-final">
+							<div class="col-md-3">
+								<img alt="Imagem cachorro brincando com gato" src="assets\imgs\mascotes.png">
+							</div>
+							<div class="col-md-9">
+								<p class="text-left">
+									A Ecopatas é a ONG pioneira no estado de São Paulo a realizar o trabalho de coleta, triagem e venda de alguns materiais recicláveis com a finalidade de realizar a castração dos animais de rua. 
+								</p>
+							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-3">
-							<img alt="Bootstrap Image Preview" src="assets\imgs\mascotes.png">
-						</div>
-						<div class="col-md-9">
-							<p class="text-left">
-								A Ecopatas é a ONG pioneira no estado de São Paulo a realizar o trabalho de coleta, triagem e venda de alguns materiais recicláveis com a finalidade de realizar a castração dos animais de rua. 
-							</p>
-						</div>
-					</div>
+					</section>
+
+
 					<div class="row">
 						<div class="col-md-12">
 							<h3>
