--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
 
 
 					<div class="row">
-						<div class="col-md-12">
+						<div class="col-md-12" id="section-dois">
 							<h3>
 								Posso doar qualquer tipo de material?
 							</h3>
