--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,18 @@
 							<p>
 								A lista de materiais que podem ser reciclados é enorme, porém a Ecopatas aceita somente tampas plásticas e lacres de lata de alumínio.  Para as atividades de triagem com os voluntários aceitamos doações de luvas,  máscaras descatáveis, tesoura, fitas adesivas e sacos de ração vazios (ráfia).
 							</p> 
-							<button type="button" class="btn btn-lg active btn-primary">
-								Ver todos os materiais aceitos
+							<!-- <div class="row">
+								<div class="col-md-12">
+									<button>Ver todos os indicadores<i class="small material-icons">pets</i></button>
+								</div>
+							</div> -->
+							<button type="button" class="btn-green" text-align="center">
+								Ver todos os materiais aceitos<i class="small material-icons">pets</i>
 							</button>
 						</div>
 					</div>
 
-					<div class="row">
+					<div class="row" id="section-tres">
 						<div class="col-md-12">
 							<h3>
 								Animais que já ajudamos
@@ -108,7 +113,7 @@
 							<div> Dados de Gabriel </div>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" id="section-quatro">
 						<div class="col-md-12">
 							<div class="flourish-embed flourish-cards" data-src="visualisation/6812885">
 								<script src="https://public.flourish.studio/resources/embed.js"></script>
@@ -117,12 +122,13 @@
 							<p>
 								O resultado do nosso trabalho vai além dos números de castrações realizadas, trabalhamos para que cada animalzinho castrado pelo nosso projeto possa ter uma vida melhor e mais saudável.
 							</p> 
-							<button type="button" class="btn btn-success">
-								Ver todos os indicadores
+
+							<button type="button" class="btn-green">
+								Ver todos os indicadores<i class="small material-icons">pets</i>
 							</button>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" id="section-cinco">
 						<div class="col-md-12">
 							<h3>
 								Seja um voluntário (a)!
@@ -134,42 +140,50 @@
 										Os voluntários  são essenciais para a realização do projeto, é com a ajuda deles que conseguimos arrecadar e triar os materiais que recebemos. Eles fazem parte do nosso time, resultados e da história da Ecopatas. Seja um voluntário Ecopatas. Existem diversas formas de ajudar!
 									</p>
 								</div>
-								<div class="col-md-6">
-									<h3>
+								<div class="col-md-6" id="lista">
+									<h5>
 										O que faz o voluntário?
-									</h3>
-									<ul>
-										<li class="list-item">
-											Realiza triagem na sede da ong
-										</li>
-										<li class="list-item">
-											Arrecada Tampinhas
-										</li>
-										<li class="list-item">
-											Realiza triagem em casa
-										</li>
-										<li class="list-item">
-											Ajuda no transporte do material 
-										</li>
-										<li class="list-item">
-											E muito mais...
-										</li>
-									</ul>
+									</h5>
+
+									<div >
+
+										<p class="list-item">
+											<i class="small material-icons">pets</i>Realiza triagem na sede da ong
+										</p>
+										<p class="pst-item">
+											<i class="small material-icons">pets</i>Arrecada Tampinhas
+										</p>
+										<p class="list-item">
+											<i class="small material-icons">pets</i>Reapza triagem em casa
+										</p>
+										<p class="list-item">
+											<i class="small material-icons">pets</i>Ajuda no transporte do material 
+										</p>
+										<p class="list-item">
+											<i class="small material-icons">pets</i>E muito mais...
+										</p>
+
+
+
+									</div>
 								</div>
 							</div> 
-							<button type="button" class="btn btn-success">
-								Quero me voluntariar
+							<button type="button" class="btn-green">
+								Quero me voluntariar<i class="small material-icons">pets</i>
 							</button>
-							<div class="row">
-								<div class="col-md-12">
-									<h3>
-										Ecopatas no Youtube
-									</h3>
-									<p>
-										Veja nossas entrevistas e conheça mais sobre nosso projeto
-									</p>
+							<div class="row"
+							>
+								<div class="col-md-12" id="section-seis">
+									<div id="section-seis-header">
+										<h3>
+											Ecopatas no Youtube
+										</h3>
+										<p>
+											Veja nossas entrevistas e conheça mais sobre nosso projeto
+										</p>
+									</div>
 									<div class="row">
-										<div class="col-md-4">
+										<div class="col-md-4"id="section-seis-videos">
 											<div class="row">
 												<div class="col-md-12">
 													<!-- <video alt="Entrevista Guia Penha on-line" href=""> </video> -->
