Estilização O que doar

--- a/src/donations.html
+++ b/src/donations.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+	<link href="css/donations.css" rel="stylesheet">
 
   </head>
   <body>
@@ -45,42 +46,48 @@
 						</ul>
 					</nav>
 				</header>
-				<main>
+				<main id="main-donations">
 					<div class="row">
 						<div class="col-md-12">
-							<h3>
-								<span>Posso doar qualquer tipo de material?</span>
-							</h3>
+							<h2>
+								Posso doar qualquer tipo de material?
+							</h2>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" id="section-1">
 						<div class="col-md-6">
 							<p>
-								<span>Para realizar nosso trabalho de castrar os animais de rua aceitamos tampas plásticas e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto, sendo descartados. Pedimos que separem o material a ser doado a Ecopatas, evite o envio de materiais como agulhas, seringas e outros materiais que possam causar prejuízos a saúde dos nossos voluntários.</span>
+								Para realizar nosso trabalho de castrar os animais de rua aceitamos tampas plásticas
+								e lacres de alumínio. Outros materiais não são aproveitados pelo nosso projeto, sendo descartados.
+								Pedimos que separem o material a ser doado a Ecopatas, evite o envio de materiais como agulhas, seringas
+								e outros materiais que possam causar prejuízos a saúde dos nossos voluntários.
 							</p>
 						</div>
 						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
+							<img alt="Bootstrap Image Preview" src=".\assets\imgs\pode-doar.png" class="rounded">
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" id="section-2">
 						<div class="col-md-6">
 							<h5>Materiais separados por cor</h5>
-							<p class="text-info">
-								<span>Sempre conseguimos vender por um preço melhor os materiais já separados por cor e tipo. Você também pode entregar a sua doação já separada.</span>
+							<p>
+								Sempre conseguimos vender por um preço melhor os materiais já separados por cor e tipo.
+								Você também pode entregar a sua doação já separada.
 							</p>
 						</div>
 						<div class="col-md-6">
-							<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg">
+							<img alt="Bootstrap Image Preview" src=".\assets\imgs\separacao.png">
 						</div>
 					</div>
-					<div class="row">
+					<div class="row" id="section-3">
 						<div class="col-md-12">
 							<h5>Doação de materiais de organização e segurança</h5>
 							<p>
-								Caso seja do seu interesse nos ajudar com a segurança dos nossos voluntários que vem a sede da Ecopatas, aceitamos doações de EPI para uma triagem segura e sem riscos biológicos para nossos queridos voluntários. Aceitamos luvas e máscaras descatáveis, tesoura, fitas adesivas, além de sacos de ração vazios (ráfia)
+								Caso seja do seu interesse nos ajudar com a segurança dos nossos voluntários que vem
+								a sede da Ecopatas, aceitamos doações de EPI para uma triagem segura e sem riscos biológicos
+								para nossos queridos voluntários. Aceitamos luvas e máscaras descatáveis, tesoura, fitas adesivas,
+								além de sacos de ração vazios (ráfia).
 							</p>
-							
 						</div>
 					</div>
 				</main>
