--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,9 @@
 								</div>
 								<div class="row">
 									<div class="col-md-12">
-										<button>Ver os pontos de arrecadação<i class="small material-icons">pets</i></button>
+										<a href="points.html"></a>
+											<button>Ver os pontos de arrecadação<i class="small material-icons">pets</i></button>
+										</a>
 									</div>
 								</div>
 								
@@ -96,14 +98,13 @@
 							<p>
 								A lista de materiais que podem ser reciclados é enorme, porém a Ecopatas aceita somente tampas plásticas e lacres de lata de alumínio.  Para as atividades de triagem com os voluntários aceitamos doações de luvas,  máscaras descatáveis, tesoura, fitas adesivas e sacos de ração vazios (ráfia).
 							</p> 
-							<!-- <div class="row">
-								<div class="col-md-12">
-									<button>Ver todos os indicadores<i class="small material-icons">pets</i></button>
-								</div>
-							</div> -->
-							<button type="button" class="btn-green" text-align="center">
-								Ver todos os materiais aceitos<i class="small material-icons">pets</i>
-							</button>
+							<div class="div-button" >
+								<a href="donations.html">
+									<button type="button" class="btn-green" text-align="center">
+										Ver todos os materiais aceitos<i class="small material-icons">pets</i>
+									</button>
+								</a>
+							</div>
 						</div>
 					</div>
 
@@ -125,9 +126,13 @@
 								O resultado do nosso trabalho vai além dos números de castrações realizadas, trabalhamos para que cada animalzinho castrado pelo nosso projeto possa ter uma vida melhor e mais saudável.
 							</p> 
 
-							<button type="button" class="btn-green">
-								Ver todos os indicadores<i class="small material-icons">pets</i>
-							</button>
+							<div class="div-button">
+								<a href="data.html">
+									<button type="button" class="btn-green">
+										Ver todos os indicadores<i class="small material-icons">pets</i>
+									</button>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="row" id="section-cinco">
@@ -167,9 +172,13 @@
 									</div>
 								</div>
 							</div> 
-							<button type="button" class="btn-green">
-								Quero me voluntariar<i class="small material-icons">pets</i>
-							</button>
+							<div class="div-button">
+								<a href="volunteer.html">
+									<button type="button" class="btn-green">
+										Quero me voluntariar<i class="small material-icons">pets</i>
+									</button>
+								</a>
+							</div>
 						</div>
 					</div>
 					<div class="row" id="section-seis">
