botao pontos de arrecadação

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 								</div>
 								<div class="row">
 									<div class="col-md-12">
-										<a href="points.html"></a>
+										<a href="points.html">
 											<button>Ver os pontos de arrecadação<i class="small material-icons">pets</i></button>
 										</a>
 									</div>
