Dados da seção 3

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,40 @@
 							<h3>
 								Animais que já ajudamos
 							</h3>
-							<div> Dados de Gabriel </div>
+	
+							<div id="dados-flourish">
+								<div class="dados">
+									<i class="small material-icons">pets</i>
+									<div id="all" class="flourish-embed" data-src="visualisation/7849583">
+										<script src="https://public.flourish.studio/resources/embed.js"></script>
+									</div>
+									<p>animais castrados</p>
+									
+								</div>
+								<div class="dados">
+									<i class="small material-icons">pets</i>
+									<div id="dogs" class="flourish-embed" data-src="visualisation/7853128">
+										<script src="https://public.flourish.studio/resources/embed.js"></script>
+									</div>
+									<p>cachorros</p>
+								</div>
+								<div class="dados">
+									<i class="small material-icons">pets</i>
+									<div id="cats" class="flourish-embed" data-src="visualisation/7853147">
+										<script src="https://public.flourish.studio/resources/embed.js"></script>
+									</div>
+									<p>gatos</p>
+								</div>
+								<div class="dados" id="outros-animais">
+									<i class="small material-icons">pets</i>
+									<div id="other" class="flourish-embed" data-src="visualisation/7852936">
+										<script src="https://public.flourish.studio/resources/embed.js"></script>
+									</div>
+									<p>outros animais, entre eles<br/>
+										porquinho da índia e coelho</p>
+								</div>
+								
+							</div>
 						</div>
 					</div>
 					<div class="row" id="section-quatro">
