--- a/src/volunteer.html
+++ b/src/volunteer.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/volunteer.css" rel="stylesheet">
+	<link href="css/header.css" rel="stylesheet">
 
   </head>
   <body>
