Btn e links ajustados

--- a/src/points.html
+++ b/src/points.html
@@ -67,7 +67,8 @@
                     </p>
 
                     <div id="div-button">
-                        <button>Quero ser voluntário<i class="small material-icons">pets</i></button>
+
+                        <button> <a href="volunteer.html">Quero ser voluntário </a><i class="small material-icons">pets</i></button>
 
                     </div>
 
