--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 	<link href="css/home.css" rel="stylesheet">
+	<link href="css/header.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
@@ -99,11 +100,10 @@
 								A lista de materiais que podem ser reciclados é enorme, porém a Ecopatas aceita somente tampas plásticas e lacres de lata de alumínio.  Para as atividades de triagem com os voluntários aceitamos doações de luvas,  máscaras descatáveis, tesoura, fitas adesivas e sacos de ração vazios (ráfia).
 							</p> 
 							<div class="div-button" >
-								<a href="donations.html">
-									<button type="button" class="btn-green" text-align="center">
-										Ver todos os materiais aceitos<i class="small material-icons">pets</i>
-									</button>
-								</a>
+								<button type="button" class="btn-green" text-align="center">
+									<a href="donations.html">Ver todos os materiais aceitos</a>
+									<i class="small material-icons">pets</i>
+								</button>
 							</div>
 						</div>
 					</div>
@@ -160,11 +160,10 @@
 							</p> 
 
 							<div class="div-button">
-								<a href="data.html">
-									<button type="button" class="btn-green">
-										Ver todos os indicadores<i class="small material-icons">pets</i>
-									</button>
-								</a>
+								<button  type="button" class="btn-green">
+									<a href="data.html"> Ver todos os indicadores</a>
+									<i class="small material-icons">pets</i>
+								</button>
 							</div>
 						</div>
 					</div>
@@ -206,11 +205,10 @@
 								</div>
 							</div> 
 							<div class="div-button">
-								<a href="volunteer.html">
-									<button type="button" class="btn-green">
-										Quero me voluntariar<i class="small material-icons">pets</i>
-									</button>
-								</a>
+								<button type="button" class="btn-green">
+									<a href="volunteer.html">Quero me voluntariar</a>
+									<i class="small material-icons">pets</i>
+								</button>
 							</div>
 						</div>
 					</div>
