--- a/src/index.html
+++ b/src/index.html
@@ -101,8 +101,7 @@
 							</p> 
 							<div class="div-button" >
 								<button type="button" class="btn-green" text-align="center">
-									<a href="donations.html">Ver todos os materiais aceitos</a>
-									<i class="small material-icons">pets</i>
+									<a href="donations.html">Ver todos os materiais aceitos <i class="small material-icons">pets</i></a>
 								</button>
 							</div>
 						</div>
@@ -161,8 +160,7 @@
 
 							<div class="div-button">
 								<button  type="button" class="btn-green">
-									<a href="data.html"> Ver todos os indicadores</a>
-									<i class="small material-icons">pets</i>
+									<a href="data.html"> Ver todos os indicadores <i class="small material-icons">pets</i></a>
 								</button>
 							</div>
 						</div>
@@ -206,8 +204,8 @@
 							</div> 
 							<div class="div-button">
 								<button type="button" class="btn-green">
-									<a href="volunteer.html">Quero me voluntariar</a>
-									<i class="small material-icons">pets</i>
+									<a href="volunteer.html">Quero me voluntariar <i class="small material-icons">pets</i></a>
+									
 								</button>
 							</div>
 						</div>
