Ajustes da fonte

--- a/src/volunteer.html
+++ b/src/volunteer.html
@@ -15,6 +15,10 @@
 	<link href="css/volunteer.css" rel="stylesheet">
 	<link href="css/header.css" rel="stylesheet">
 
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
   </head>
   <body>
 		<div>
