--- a/src/data.html
+++ b/src/data.html
@@ -14,6 +14,10 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/header.css" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
         <div>
@@ -67,11 +71,6 @@
                     </div>
         
                     <div class="flourish-embed flourish-chart" data-src="visualisation/6824812">
-                        <script src="https://public.flourish.studio/resources/embed.js">
-                        </script>
-                    </div>
-                        
-                    <div class="flourish-embed flourish-cards" data-src="visualisation/6812885">
                         <script src="https://public.flourish.studio/resources/embed.js">
                         </script>
                     </div>
